fixed todoApp img

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="projects__title"><h2> Algunos de mis Proyectos</h2></div>
 
                     <div class="projects__item">
-                        <img class="item__img " src="img\todo-app.png" alt="" srcset="">
+                        <img class="item__img " src="img\todo-app.PNG" alt="" srcset="">
                         <div class="item__content">
                          <div class="item__title">TodoApp</div>
                          <div clas="item__description">Una Lista de tareas creada con React y utilizando localStorage</div>
